BGAME  building GalleryPage 2

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -20,7 +20,7 @@
 
 .top-bar.expanded .title-area,
 .contain-to-grid {
-  background-color: rgba(46, 61, 82, 0.97);
+  background-color: #333d4f;
 }
 
 table {
