BGAME editing less

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header-branding {
-  background: @BlizzgameColor url(@BgImage) no-repeat @BgVerticalPosition 50%;
+  background: @BlizzgameColor url(@BgImage) no-repeat 50% @BgVerticalPosition;
   background-size: cover;
   box-shadow: inset 0px 0px 15px #000;
   text-shadow: 1px 1px 1px black;
