BGAME editing gallery front end

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -163,6 +163,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+#filter-by-tag,
+#filter-by-author {
+  height: 300px;
+  overflow-y: auto;
+}
+
 .main,
 .news-holder {
   .contentStyle();
