BGAME  Поправил верстку галереи

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -137,6 +137,9 @@ ul.children-page-list {
   }
 }
 
+.gallery-section {
+  margin: 20px;
+}
 #filter-by-tag,
 #filter-by-author {
   height: 300px;
