breadcrumbs fix. ObjectAsPageExtension added

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -95,6 +95,9 @@ h1, h2, h3, h4, h5, h6 {
 .top-bar {
   background: @BlizzgameColor;
   height: 3rem;
+  &.expanded .title-area {
+    background: @BlizzgameColor;
+  }
 }
 .top-bar-section ul {
   background: @BlizzgameColor;
