BGAME bug fix Book's cms fields, header and footer width

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
 .footer,
 .blizzgame-top-bar,
 .header-branding {
-  max-width: 1080px;
+  max-width: 67.5rem;
   left: 0;
   right: 0;
   margin: auto;
