--- a/themes/foundation/css/style.css
+++ b/themes/foundation/css/style.css
@@ -41,22 +41,16 @@ HEADER SECTION
     margin: 20px;
 }
 
-#footerDiv{color:#797979;font-size:1em;background-color:#162331;height:300px;padding:30px;line-height: 15px;}
-#footerDiv hr{height:1px;clear:both;border:0;color: #898D97;background-color: #898D97;}
-#footerDiv h6{font-weight:normal;width: 220px;float: left;font-size:1.02em;margin-bottom:5px;color:#fff}
-#footerDiv ul{width: 220px;float: left;}
-#footerDiv ul {
-    margin: 5px 0px 5px 0px;
-    padding-bottom: 5px;
-    overflow:hidden;
+/* clearing carousel */
+.visible-img img {
+    max-height: 88%;
 }
-#footerDiv ul li{
-    margin: 2px 10px 2px 0px;
-    list-style-type: none;
-    font-size:0.85em;
+.clearing-blackout,
+.clearing-caption,
+.clearing-assembled .clearing-container .visible-img,
+.clearing-assembled .clearing-container .carousel {
+    background-color: #162331;
 }
-#footerDiv a{color:#797979;text-decoration:none;font-size:0.85em;}
-#footerDiv a:hover{color:#ff0000}
 
 /* NEWS SECTION */
 .month {
@@ -71,6 +65,9 @@ HEADER SECTION
     list-style-type: none;
 }
 
+/**
+ Icons for Children Pages
+*/
 .icon-frame {
     display: inline-block;
     overflow: hidden;
@@ -89,4 +86,63 @@ HEADER SECTION
 .frame-56 {
     height: 56px;
     width: 56px;
+}
+
+.frame-32 {
+    height: 32px;
+    width: 32px;
+}
+
+/** Footer */
+#footerDiv {
+    color: #797979;
+    font-size: 1em;
+    background-color: #162331;
+    height: 300px;
+    padding: 30px;
+    line-height: 15px;
+}
+
+#footerDiv hr {
+    height: 1px;
+    clear: both;
+    border: 0;
+    color: #898D97;
+    background-color: #898D97;
+}
+
+#footerDiv h6 {
+    font-weight: normal;
+    width: 220px;
+    float: left;
+    font-size: 1.02em;
+    margin-bottom: 5px;
+    color: #fff
+}
+
+#footerDiv ul {
+    width: 220px;
+    float: left;
+}
+
+#footerDiv ul {
+    margin: 5px 0 5px 0;
+    padding-bottom: 5px;
+    overflow:hidden;
+}
+
+#footerDiv ul li{
+    margin: 2px 10px 2px 0;
+    list-style-type: none;
+    font-size:0.85em;
+}
+
+#footerDiv a {
+    color: #797979;
+    text-decoration: none;
+    font-size: 0.85em;
+}
+
+#footerDiv a:hover {
+    color: #ff0000
 }
