--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -222,3 +222,20 @@ ul.children-page-list {
   -webkit-border-bottom-right-radius: 10px;
   -moz-border-radius: 0 0 10px 10px;
 }
+
+.description {
+  color: rgb(128, 128, 0);
+}
+.say {
+  color: rgb(248, 251, 170);
+}
+.cry {
+  color: rgb(250, 0, 0);
+}
+
+.wisper {
+  color: rgb(235, 180, 212);
+}
+.action {
+  color: rgb(241, 117, 47);
+}
