--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -47,16 +47,32 @@ h1, h2, h3, h4, h5, h6 {
   margin: auto;
 }
 
-.content-section {
-  border: 1px solid #ddd;
-  max-width: 67.5rem;
-  background: #fff;
-}
-
-.f-topbar-fixed {
-  padding-top: 0!important;
+.upper-top {
+  height: 3.1rem;
 }
 .top-bar-section ul li {
+  .user-credential {
+    > a:not(.button) {
+      padding: 0;
+      &:hover {
+        border-bottom: none;
+      }
+    }
+    > a.logout-link {
+      i:hover {
+        color: red;
+      }
+    }
+    img {
+      height: 2.8rem;
+    }
+    span {
+      color: #999;
+    }
+    i {
+      color: #999;
+    }
+  }
   &.game-icon {
     > a {
       text-transform: uppercase;
@@ -92,13 +108,19 @@ h1, h2, h3, h4, h5, h6 {
 .blizgame-color,
 .top-bar {
   background: @BlizzgameColor;
-  height: 3rem;
   &.expanded .title-area {
     background: @BlizzgameColor;
   }
 }
 .top-bar-section ul {
   background: @BlizzgameColor;
+  .dropdown li {
+    &:not(.has-form):not(.active)>a:not(.button),
+    &:not(.has-form):not(.active):hover>a:not(.button) {
+      background: @BlizzgameColor;
+      color: #999;
+    }
+  }
   li {
     background: @BlizzgameColor;
     &:not(.has-form) a:not(.button) {
@@ -111,15 +133,21 @@ h1, h2, h3, h4, h5, h6 {
       a:not(.button):hover,
       a:not(.button) {
         background: @BlizzgameColor;
-        border-bottom: 2px solid #FF0000;
+
       }
     }
     &:not(.has-form) a:not(.button):hover {
       background: @BlizzgameColor;
       color: #fff;
-      border-bottom: 2px solid #FF0000;
+
     }
   }
+}
+
+.content-section {
+  border: 1px solid #ddd;
+  max-width: 67.5rem;
+  background: #fff;
 }
 
 ul.children-page-list {
@@ -223,19 +251,20 @@ ul.children-page-list {
   -moz-border-radius: 0 0 10px 10px;
 }
 
-.description {
-  color: rgb(128, 128, 0);
-}
-.say {
-  color: rgb(248, 251, 170);
-}
-.cry {
-  color: rgb(250, 0, 0);
-}
-
-.wisper {
-  color: rgb(235, 180, 212);
-}
-.action {
-  color: rgb(241, 117, 47);
+.chronicle-section {
+  .description {
+    color: rgb(128, 128, 0);
+  }
+  .say {
+    color: rgb(248, 251, 170);
+  }
+  .cry {
+    color: rgb(250, 0, 0);
+  }
+  .wisper {
+    color: rgb(235, 180, 212);
+  }
+  .action {
+    color: rgb(241, 117, 47);
+  }
 }
