--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -150,6 +150,15 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
 }
 
+.element-link-image {
+  padding: 1px;
+  background: @BlizzgameColor;
+  display: inline;
+  float: left;
+  border-radius: 4px;
+  margin-right: 15px;
+}
+
 ul.children-page-list {
   list-style: none;
   li.children-page {
@@ -159,26 +168,15 @@ ul.children-page-list {
     h6 {
       margin: 0;
     }
-    .element-link-image {
-      padding: 1px;
-      background: @BlizzgameColor;
-      display: inline;
-      float: left;
-      border-radius: 4px;
-      margin-right: 15px;
-    }
   }
 }
 
 .ency li {
   float: left;
   border-bottom: 1px #ddd solid;
+  padding-bottom: 20px;
 }
 .element-link-image {
-  .element-link-title,
-  img {
-    display: inline-block;
-  }
   .element-link-title {
     width: 120px;
     height: 70px;
