--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -3,15 +3,12 @@
 @BgImage: @BackgroundImage;
 @ElementLinkImage: @DefaultElementImage;
 
-@contentBgColor: #fff;
-@contentColor: inherit;
-@borderColor: #ddd;
-@textColor: inherit;
 @headerColor: inherit;
 @linkColor: #d9d9d9;
 @BlizzgameColor: #333d4f;
 @BlizzgameDark: #162331;
 @ImageDir: "@{ThemeDir}/images/";
+@blueColor: #00B4FF;
 
 .icon-frame[src=''] {
   padding: 0;
@@ -31,11 +28,16 @@ body {
 
 .footer {
   background: @BlizzgameDark;
-  box-shadow: inset 0px 0px 15px #000;
+  box-shadow: inset 0 0 15px #000;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: @headerColor;
+}
+
+.upper-top {
+  height: 3.1rem;
+  background-color: transparent;
 }
 
 .footer,
@@ -47,9 +49,6 @@ h1, h2, h3, h4, h5, h6 {
   margin: auto;
 }
 
-.upper-top {
-  height: 3.1rem;
-}
 .top-bar-section ul li {
   .user-credential {
     > a:not(.button) {
@@ -106,7 +105,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .blizgame-color,
-.top-bar {
+.lower-top {
   background: @BlizzgameColor;
   &.expanded .title-area {
     background: @BlizzgameColor;
@@ -203,7 +202,7 @@ ul.children-page-list {
   position: relative;
   .gallery-art {
     min-width: 500px;
-    min-height: 300px;
+    height: auto;
   }
   .art-navigation-control {
     padding-left: 0.9375rem;
@@ -228,8 +227,8 @@ ul.children-page-list {
 
 .news {
   border-bottom: #ddd 1px solid;
-  padding: 10px;
-  margin: 10px;
+  padding: 10px 0;
+  margin: 10px 0;
 }
 
 .blizzquote {
@@ -242,7 +241,7 @@ ul.children-page-list {
   -webkit-box-shadow: inset 0 0 6px #000;
   margin: 0 5px;
   color: #00B4FF;
-  text-shadow: 1px 1px 0px #0b0f13;
+  text-shadow: 1px 1px 0 #0b0f13;
   padding: 20px;
   -webkit-border-bottom-left-radius: 10px;
   -webkit-border-bottom-right-radius: 10px;
