работы по домашней странице. верстка и прочее

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -229,6 +229,10 @@ ul.children-page-list {
   border-bottom: #ddd 1px solid;
   padding: 10px 0;
   margin: 10px 0;
+  &.last,
+  &:last-child {
+    border-bottom: none;
+  }
 }
 
 .blizzquote {
