--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -1,48 +1,165 @@
-.panel h1,
-.panel h2,
-.panel h3,
-.panel h4,
-.panel h5,
-.panel h6,
-.panel p,
-.panel li {
-    color: #d9d9d9;
+/*
+HEADER SECTION
+*/
+
+.top-bar,
+#header-branding img {
+    transition: all 0.5s ease 0.1s;
 }
 
-.side-nav li.active > a:first-child:not(.button) {
-    color: #d9d9d9;
+#header-branding {
+    height: 100px;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    color: #d9d9d9;
+.header-section {
+    -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
+    position: fixed;
+    z-index: 999;
+    min-width: 100%;
 }
 
-.panel,
-.main > div {
-    background-color: #191f29;
-    color: #d9d9d9;
+.header-fill {
+    background: #fff;
+    height: 135px;
 }
 
-.panel {
-    border-color: #373C47;
+.header-fill .tablet-mobile-logo img {
+    padding-top: 30px;
 }
 
-.eight, .row .eight {
-    width: 66.66667%;
+.full-width {
+    min-width: 100%;
 }
 
-.four, .row .four {
-    width: 33.33333%;
+/*
+CONTENT
+*/
+
+.main-content {
+    padding: 0 20px;
+    float: left;
+    width: 100%;
 }
 
+.crop-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.news-section {
+    margin: 20px;
+}
+
+/* clearing carousel */
+.visible-img img {
+    max-height: 88%;
+}
+.clearing-blackout,
+.clearing-caption,
+.clearing-assembled .clearing-container .visible-img,
+.clearing-assembled .clearing-container .carousel {
+    background-color: #162331;
+}
+
+.orbit-container .orbit-slides-container>* .orbit-caption {
+    background-color: rgba(22, 35, 49, 0.51);
+}
+
+/* NEWS SECTION */
 .month {
     font-family: "Proxima Nova Condensed", "proxima-nova-condensed", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
     color: #333;
-
     padding: 2px 0;
     margin-bottom: 7px;
     line-height: 1.5;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 14px;
+    list-style-type: none;
+}
+
+/**
+ Icons for Children Pages
+*/
+.icon-frame {
+    display: inline-block;
+    overflow: hidden;
+    padding: 1px;
+    background-color: #000;
+    background-position: 1px 1px;
+    background-repeat: no-repeat;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: 1px solid #434445;
+    border-bottom-color: #2f3032;
+    border-top-color: #b1b2b4;
+}
+
+.frame-56 {
+    height: 56px;
+    width: 56px;
+}
+
+.frame-32 {
+    height: 32px;
+    width: 32px;
+}
+
+/**
+    FOOTER
+*/
+#footerDiv {
+    color: #797979;
+    font-size: 1em;
+    background-color: #162331;
+    height: 300px;
+    padding: 30px;
+    line-height: 15px;
+}
+
+#footerDiv hr {
+    height: 1px;
+    clear: both;
+    border: 0;
+    color: #898D97;
+    background-color: #898D97;
+}
+
+#footerDiv h6 {
+    font-weight: normal;
+    width: 220px;
+    float: left;
+    font-size: 1.02em;
+    margin-bottom: 5px;
+    color: #fff
+}
+
+#footerDiv ul {
+    width: 220px;
+    float: left;
+}
+
+#footerDiv ul {
+    margin: 5px 0 5px 0;
+    padding-bottom: 5px;
+    overflow:hidden;
+}
+
+#footerDiv ul li{
+    margin: 2px 10px 2px 0;
+    list-style-type: none;
+    font-size:0.85em;
+}
+
+#footerDiv a {
+    color: #797979;
+    text-decoration: none;
+    font-size: 0.85em;
+}
+
+#footerDiv a:hover {
+    color: #ff0000
 }
