--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -152,7 +152,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .content-section {
-  border: 1px solid #ddd;
+  border: 1px solid @BlizzgameColor;
   max-width: 67.5rem;
   background: #fff;
 }
@@ -200,10 +200,6 @@ ul.children-page-list {
     background-image: url(http://wow.blizzgame.ru/assets/Warcraft-Gallery/_resampled/CroppedImage200200-Dark-Lady-Sylvanas-Windrunner-by-Arnold-Tsang.jpg);
     background-position: 50%;
     background-size: contain;
-  }
-  p {
-    margin-bottom: 0;
-    text-align: center;
   }
 }
 .art-info {
