--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -52,8 +52,21 @@
     border-bottom: 1px solid #ddd;
 }
 
-.side-nav li.active {
-    border: 1px #9fe4fa solid;
+.tab-style li {
+    border-left: 1px #ddd solid;
+    margin: 0;
+}
+
+.tab-style li.heading {
+    border-left: none;
+}
+.tab-style li.active {
+    border: 1px #ddd solid;
+    border-left: none;
+}
+
+.tab-style li.active > a:first-child:not(.button) {
+    color: #222;
 }
 
 .th p {
@@ -99,9 +112,27 @@
     list-style-type: none;
 }
 
-/**
- Icons for Children Pages
-*/
+/** Chronicles */
+.tabs dd > a,
+.tabs .tab-title > a {
+    background-color: #fff;
+    color: #222;
+    border-left: 1px #ddd solid;
+}
+.tabs dd.active a,
+.tabs .tab-title.active a {
+    color: #007AFD;
+    border-bottom: 1px #ddd solid;
+    border-top: 1px #ddd solid;
+    border-right: 1px #ddd solid;
+    border-left: none;
+}
+.tabs.vertical {
+    width: 100%;
+    max-width: 100%;
+}
+
+/** Icons for Children Pages */
 .icon-frame {
     display: inline-block;
     overflow: hidden;
@@ -117,6 +148,10 @@
     border-top-color: #b1b2b4;
 }
 
+.icon-frame[src=''] {
+    background: #b1b2b4;
+}
+
 .frame-56 {
     height: 56px;
     width: 56px;
@@ -127,9 +162,7 @@
     width: 32px;
 }
 
-/**
-    FOOTER
-*/
+/** FOOTER */
 #footerDiv {
     color: #797979;
     font-size: 1em;
