--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -10,17 +10,16 @@
 @ImageDir: "@{ThemeDir}/images/";
 @blueColor: #00B4FF;
 
-.icon-frame[src=''] {
-  padding: 0;
-  background-image: url(@ElementLinkImage);
-}
 
 .bgStyle() {
   background: @BlizzgameDark no-repeat 50% 50%;
-  background-image: url(@BgImage);
   -webkit-background-size: auto;
   background-size: cover;
   background-attachment: fixed;
+}
+
+.bgStyle() when not (@BgImage = "") {
+  background-image: url(@BgImage);
 }
 
 body {
@@ -182,6 +181,9 @@ ul.children-page-list {
   float: left;
   border-bottom: 1px #ddd solid;
   padding-bottom: 20px;
+  .element-link:not(.button) {
+    padding-left: 0;
+  }
 }
 .element-link-image {
   .element-link-title {
@@ -262,18 +264,18 @@ ul.children-page-list {
 
 .chronicle-section {
   .description {
-    color: rgb(128, 128, 0);
+    color: rgb(0, 94, 33);
   }
   .say {
-    color: rgb(248, 251, 170);
+    color: rgb(142, 85, 9);
   }
   .cry {
     color: rgb(250, 0, 0);
   }
   .wisper {
-    color: rgb(235, 180, 212);
+    color: rgb(128, 126, 123);
   }
   .action {
-    color: rgb(241, 117, 47);
+    color: rgb(241, 117, 17);
   }
 }
