--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -165,6 +165,114 @@
     width: 32px;
 }
 
+/* Forum */
+.media {
+    position: relative;
+    height: 200px;
+}
+
+.forum-profile-block {
+    margin-bottom: 10px;
+}
+.round-badge.badge-md {
+    padding: 18px;
+    width: 70px;
+    height: 70px;
+    margin-bottom: 12px;
+}
+.round-badge {
+    display: inline-block;
+    padding: 14px;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    line-height: 1.1em;
+    background-color: #2b303b;
+    -webkit-transition: all ease-in-out .2s;
+    -o-transition: all ease-in-out .2s;
+    transition: all ease-in-out .2s;
+}
+.round-badge .icon {
+    margin: 0;
+    color: #42c6f3;
+    opacity: 1;
+    display: block;
+    text-align: center;
+}
+.round-badge.badge-md .icon {
+    font-size: 34px;
+    width: 34px;
+}
+
+.img-circle-holder {
+    height: 52px;
+    width: 52px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 1px;
+    background-color: #eee;
+    position: relative;
+}
+.img-circle-holder.img-xl {
+    height: 120px;
+    width: 120px;
+    margin-right: 20px;
+}
+.avatar {
+    height: 100%;
+    width: 100%;
+}
+.media,
+.media-body {
+    overflow: hidden;
+    zoom: 1;
+}
+.hr-green {
+    width: 80px;
+    margin-top: 40px;
+    margin-bottom: 44px;
+    margin-left: 0;
+}
+h2.profile-name {
+    margin-bottom: 0;
+    font-weight: 700;
+}
+a.action-link {
+    color: #78898d;
+    margin-left: 5px;
+    position: absolute;
+}
+.small {
+    font-size: 15px;
+}
+
+.icon-set .icon-ball {
+    margin: auto;
+}
+.icon-set {
+    margin: 0 auto auto;
+}
+.icon-ball {
+    display: inline-block;
+    border-radius: 100%;
+    background-color: #ea5541;
+    width: 28px;
+    height: 28px;
+    color: #fff;
+    line-height: 1.3;
+    text-align: center;
+    padding-top: 4px;
+    -webkit-transition: all ease-in-out .2s;
+    -o-transition: all ease-in-out .2s;
+    transition: all ease-in-out .2s;
+}
+.icon-set .icon-ball:hover {
+    color: #fff;
+    width: 32px;
+    height: 32px;
+    font-size: 20px;
+}
+
 /** FOOTER */
 #footerDiv {
     color: #797979;
