--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -168,6 +168,8 @@
     margin-bottom: 0;
     text-align: center;
     background-color: #fff;
+    font-size: 0.9rem;
+    color: #333D4F;
 }
 
 .crop-text {
