fix children list css and tags sort order

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -119,14 +119,22 @@ ul.children-page-list {
   }
 }
 
-.ency li {
-  float: left;
-  border-bottom: 1px #ddd solid;
-  padding-bottom: 20px;
-  .element-link:not(.button) {
-    padding-left: 0;
+.ency {
+  margin: 0;
+  padding: 0.875rem 0;
+  li {
+    float: left;
+    border-bottom: 1px #ddd solid;
+    padding-bottom: 20px;
+    font-size: 0.875rem;
+    font-weight: normal;
+    margin: 0 0 0.4375rem 0;
+    .element-link:not(.button) {
+      padding-left: 0;
+    }
   }
 }
+
 .element-link-image {
   .element-link-title {
     width: 120px;
