forum breadcrumb fix

--- a/themes/foundation/css/hots.css
+++ b/themes/foundation/css/hots.css
@@ -63,7 +63,7 @@
   right: 2px;
 }
 .hero-thumbnail__link.abathur {
-  background-position: 0 0px;
+  background-position: 0 0;
 }
 .hero-thumbnail__link.arthas {
   background-position: 0 -72px;
