верстка по разделу Blizz 3

--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -128,7 +128,8 @@ ul.children-page-list {
   li {
     float: left;
     border-bottom: 1px #ddd solid;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
+    padding-top: 15px;
     font-size: 0.875rem;
     font-weight: normal;
     margin: 0 0 0.4375rem 0;
