--- a/themes/foundation/css/hots.css
+++ b/themes/foundation/css/hots.css
@@ -1,5 +1,6 @@
 .hero-select-area {
   position: relative;
+  height: 120px;
 }
 
 .hero-widget__thumbnail-list {
@@ -7,7 +8,14 @@
   overflow: visible;
   margin: 0;
 }
-
+.hero-widget__thumbnail-list li:first-child {
+  margin-left: 0;
+}
+.hero-widget__thumbnail-list .hero-title {
+  text-align: center;
+  color: #fff;
+  text-shadow: 0 0 1rem #009cff;
+}
 .hero-thumbnail {
   list-style-type: none;
   padding: 2px;
