--- a/themes/foundation/css/hots.css
+++ b/themes/foundation/css/hots.css
@@ -1,6 +1,6 @@
 .hero-select-area {
   position: relative;
-  height: 120px;
+  height: 140px;
 }
 
 .hero-widget__thumbnail-list {
@@ -8,8 +8,10 @@
   overflow: visible;
   margin: 0;
 }
-.hero-widget__thumbnail-list li:first-child {
+.hero-widget__thumbnail-list li {
   margin-left: 0;
+  margin-right: 1.375rem;;
+
 }
 .hero-widget__thumbnail-list .hero-title {
   text-align: center;
@@ -19,6 +21,7 @@
 .hero-thumbnail {
   list-style-type: none;
   padding: 2px;
+  width: 68px;
   background: #0097ad;
   background: linear-gradient(#0097ad, #5a54e5);
   display: inline-block;
